# veNum

./: Cargo.toml  README.md  TODO.md  creds.md
examples/: bench.rs  broadcast.rs  conv.rs  display.rs  eg.rs  eye.rs  kernels.rs  maps.rs  mapzip.rs  matmul.rs  perceptron.rs  testing.rs
src/: lib.rs  temp_utils.rs  utils.rs
src/core/: conv.rs  display.rs  elem_ops.rs  errors.rs  index.rs  indexer.rs  matmul.rs  mod.rs  ops.rs  shape.rs  slicer.rs  tensor.rs  tests.rs  utils.rs
src/core/cpu/: conv.rs  display.rs  elem_ops.rs  matmul.rs  mod.rs  one.rs  ops.rs  scalar.rs  tensor.rs
src/core/iters/: mod.rs  slicer.rs  strider.rs
src/core/ops/: conv.rs  elem_ops.rs  matmul.rs  mod.rs  pool.rs  reduce_ops.rs
